--- a/src/PageView.less
+++ b/src/PageView.less
@@ -16,13 +16,12 @@
     flex-grow: 0;
     flex-shrink: 0;
     display: flex;
-    padding: 10px;
+    padding: 15px 10px;
     justify-content: center;
     align-items: center;
     background: #f7f7f6;
     position: relative;
     border-bottom: 1px solid #d5d5d5;
-    min-height: 45px;
 
     i {
       border: 1px solid #000;
@@ -58,7 +57,7 @@
 }
 
 .PageViewBg {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
