--- a/src/PageView.less
+++ b/src/PageView.less
@@ -12,7 +12,7 @@
   transform: translateZ(0);
   background: white;
   transition: all 0.6s;
-  header {
+  > header {
     flex-grow: 0;
     flex-shrink: 0;
     display: flex;
@@ -49,7 +49,7 @@
       margin: 0;
     }
   }
-  main {
+  > main {
     flex-grow: 1;
     flex-shrink: 1;
     overflow: auto;
