--- a/h5-webview/src/PageHeader.less
+++ b/h5-webview/src/PageHeader.less
@@ -3,7 +3,7 @@
   border-bottom: 1px solid #eee;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   line-height: 1;
@@ -14,12 +14,10 @@
   flex-grow: 0;
   flex-shrink: 0;
 
+  color: #000;
+  font-size: 16px;
   .Back {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 0 20px 0 10px;
+    padding: 0 10px 0 10px;
     height: 100%;
 
     display: flex;
@@ -37,28 +35,23 @@
   }
 
   .Title {
-    font-size: 16px;
     text-align: center;
     font-weight: normal;
-    color: #000;
     margin: 0;
     word-break: keep-all;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    padding: 0 50px;
   }
 
   .Extra {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+  }
 
-    padding-right: 10px;
+  > *:not(:last-child) {
+    margin-right: 10px;
   }
 }
